error msg no longer behind illustration

--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,6 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
   overflow: auto;
   font-family: 'Roboto', sans-serif;
   background: #fafafa;
@@ -16,8 +15,13 @@ body {
   margin: 0 auto;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   overflow-x: hidden;
+  min-height: 100%;
 }
 
 label {
